ica/topic-9/nginx-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: retry
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-app
    version: v1
  name: nginx-app-v1
  namespace: retry
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx-app
      version: v1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-app
        version: v1
    spec:
      volumes:
      - name: html
        emptyDir: {}
      - name: nginx-config
        configMap:
          name: nginx-app-cm
      containers:
      - image: openresty/openresty
        name: nginx-app
        resources: {}
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
          #subPath: nginx.conf
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-app
  name: nginx-app
  namespace: retry
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-app
